# crunchy-girlz

./: .gitignore  CLAUDE.md  README.md  get_token.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
.cursor/rules/: python.mdc  react.mdc
.github/workflows/: app-build.yml  app-deploy.yml
.storybook/: main.ts  preview.css  preview.ts
api/: main.py
api/api_files/: get_token.html
api/contracts/: __init__.py
api/models/: ingredient.py  meal_plan.py  recipe.py  unit_of_measure.py
api/routers/v1/: __init__.py  ingredients.py  meal_plans.py  recipes.py  units.py
api/services/: ingredient_service.py  meal_plan_service.py  openai_service.py  recipe_service.py  unit_of_measure_service.py
api/settings/: auth.py  config.py  database.py
client/: index.html
client/src/: App.tsx  AuthWrapper.tsx  Layout.tsx  env.d.ts  index.tsx  main.ts  style.css
client/src/components/: index.ts
client/src/components/button/: Button.module.css  Button.stories.tsx  Button.tsx  ButtonLink.stories.tsx  ButtonLink.tsx
client/src/components/card/: Card.module.css  Card.stories.tsx  Card.tsx  index.ts
client/src/components/error-message/: ErrorMessage.module.css  ErrorMessage.stories.tsx  ErrorMessage.tsx  index.ts
client/src/components/icons/: Icon.tsx  (+6 more)
client/src/examples/: auth-usage.md
client/src/hooks/: useAuth.ts  useAxios.ts  useRecipeApi.ts
client/src/lib/: axios.ts  supabaseClient.ts
client/src/types/: recipe.ts
db/: init.sql
docker/: Dockerfile  lambda.Dockerfile
scripts/: deploy.sh  start.sh
(+49 files in other folders)
